Melhorias no codigo 2